Deploy: GitHub Pages static export + workflow; public repo

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "fetch": "tsx scripts/fetch.ts"
+    "fetch": "tsx scripts/fetch.ts",
+    "export": "next build && next export -o out"
   },
   "dependencies": {
     "next": "16.1.6",
